--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,27 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.FavoritePage {
+  transition: 0.3s;
+
+  padding: 5px 10px 5px 10px;
+  text-align: right;
   color: white;
+  font-size: 1.5rem;
+  margin: 15px;
+  border: 2px solid #5c4b8a;
 }
 
-.App-link {
-  color: #61dafb;
+.FavoritePage:hover {
+  background-color: #222222;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  scrollbar-gutter: stable;
+  background-color: #121212;
 }
