filmPage add and toTop button

--- a/src/Routes/SearchPage/Searchpage.css
+++ b/src/Routes/SearchPage/Searchpage.css
@@ -13,6 +13,20 @@
   animation: PageShow 0.3s ease-out forwards;
 }
 
+@keyframes RemoveElem {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    display: none;
+  }
+}
+
+.AnimationsRemove {
+  animation: RemoveElem 0.3s ease-out forwards;
+}
+
 @keyframes PageShowFavorite {
   from {
     margin-top: 100px;
@@ -128,6 +142,30 @@ h2 {
   }
 }
 
+.toTop {
+  cursor: pointer;
+  transition: 0.3s;
+
+  right: 10px;
+  bottom: 10px;
+  z-index: 5;
+  position: fixed;
+
+  font-size: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: #514279;
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+}
+
+.toTop:hover {
+  background-color: #514279b0;
+}
+
 .MoviePoster {
   transition: 0.3s;
 
@@ -138,6 +176,10 @@ h2 {
   border: 2px solid #9b59b6;
   background-color: #24242491;
   margin: 50px;
+}
+
+.MoviePoster:first-child {
+  margin-top: 0;
 }
 
 .MoviePoster:hover {
@@ -213,4 +255,27 @@ select {
 .Rating {
   font-size: 2rem;
   color: #7a5b9d;
+}
+
+.Navigator {
+  margin: 0 auto;
+  width: 200px;
+
+  gap: 50px;
+  justify-content: center;
+  display: flex;
+}
+
+.Navigator > button {
+  border: 2px solid #7962b8;
+  background-color: #514279;
+}
+
+.Navigator > button:hover {
+  background-color: #7962b8c7;
+}
+
+.PageRouter {
+  margin: 0;
+  margin-top: 25px;
 }
