Genres and bugfixes

--- a/src/Routes/Header/header.css
+++ b/src/Routes/Header/header.css
@@ -12,9 +12,10 @@
   transform: translate(-50%);
 }
 
-@media (max-width: 620px) {
+@media (max-width: 670px) {
   .centerSwitch {
     position: initial;
+    margin-left: 30px;
   }
 }
 
