--- a/src/Routes/MovieDetails/MovieDetails.css
+++ b/src/Routes/MovieDetails/MovieDetails.css
@@ -8,6 +8,7 @@
 }
 
 h3 {
+  background-color: rgba(26, 26, 26, 0.993);
   padding: 10px;
   color: #9476e7;
   text-align: left;
@@ -33,6 +34,7 @@ h3 {
 }
 
 .activeFavorite {
+  border: 2px solid black;
   margin: 15px auto;
   transition: 0.3s;
   background-color: yellow;
@@ -54,6 +56,7 @@ h3 {
 }
 
 .AddToFavorites {
+  border: 2px solid black;
   transition: 0.3s;
   margin: 0 auto;
 
@@ -68,10 +71,13 @@ h3 {
   background-color: rgb(255, 255, 255);
 }
 
+span {
+  color: rgb(255, 255, 255);
+}
+
 .DetailDesc {
   margin-top: 10px;
   display: block;
-  color: white;
 }
 
 .Poster {
